Fixed submenu z-index issue

--- a/themes/apphotography/assets/css/apphotography.css
+++ b/themes/apphotography/assets/css/apphotography.css
@@ -141,8 +141,8 @@ h6 {
 #cssmenu ul li.has-sub:hover > div {
     display: block;
     position: absolute;
-    top:0;
     left:-7%;
+    z-index: 99999999;
 }
 /* submenu block */
 #cssmenu ul li > ul,
@@ -165,6 +165,7 @@ h6 {
 	padding: 5px 0;
 	margin: 0;
     position: relative;
+    z-index: 99999999;
 }
 /* submenu text */
 #cssmenu ul li > ul li a {
@@ -179,6 +180,7 @@ h6 {
 }
 #cssmenu ul li > ul li:hover{
     background-color: var(--slate-grey);
+    z-index: 99999999;
 }
 
 
